# robotics

./: .gitignore  go.mod  go.sum
example/sce/: .gitignore  CMakeLists.txt  README.md  build_win64.bat
example/sce/src/: CMakeLists.txt  abstractsettingswidget.h  emulatedblock.cpp  emulatedblock.h  emulatedline.cpp  emulatedline.h  emulation.h  emulationcore.cpp  emulationcore.h  interfaces.h  main.cpp  modules.h  packet.cpp  packet.h  qtinterfaces.h
example/sce/src/gui/packetview/: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
example/sce/src/gui/packetview/QCustomPlot/: CMakeLists.txt
example/sce/src/gui/qt/: CMakeLists.txt  main.cpp  mainresources.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
example/sce/src/gui/qt/BUCSettingsWidget/: CMakeLists.txt  bucsettingswidget.cpp  bucsettingswidget.h  bucsettingswidget.ui
example/sce/src/gui/qt/BaseBlockWidget/: CMakeLists.txt  baseblockwidget.cpp  baseblockwidget.h  baseblockwidget.ui
example/sce/src/gui/qt/BlocksAreaWidget/: CMakeLists.txt  blocksareawidget.cpp  blocksareawidget.h  blocksareawidget.ui
example/sce/src/gui/qt/BlocksAreaWidget/RunStopButton/: CMakeLists.txt  resources.qrc  runstopbutton.cpp  runstopbutton.h
example/sce/src/gui/qt/BlocksAreaWidgetNext/: CMakeLists.txt  blocksareawidgetnext.cpp  blocksareawidgetnext.h  blocksareawidgetnext.ui
example/sce/src/gui/qt/ClientsPage/: CMakeLists.txt  clientspage.cpp  clientspage.h  clientspage.ui
example/sce/src/gui/qt/DefaultSettingsWidget/: CMakeLists.txt  defaultsettingswidget.cpp  defaultsettingswidget.h  defaultsettingswidget.ui
example/sce/src/gui/qt/DemodulatorSettingsWidget/: CMakeLists.txt  demodulatorsettingswidget.cpp  demodulatorsettingswidget.h  demodulatorsettingswidget.ui
example/sce/src/gui/qt/EmulationWorker/: CMakeLists.txt  emulation_worker.cpp  emulation_worker.h
example/sce/src/gui/qt/InputSettingsWidget/: CMakeLists.txt  inputsettingswidget.cpp  inputsettingswidget.h  inputsettingswidget.ui
example/sce/src/gui/qt/LineSettingsWidget/: CMakeLists.txt  linesettingswidget.cpp  linesettingswidget.h  linesettingswidget.ui
example/sce/src/gui/qt/ModulatorSettingsWidget/: CMakeLists.txt  modulatorsettingswidget.cpp  modulatorsettingswidget.h  modulatorsettingswidget.ui
example/sce/src/gui/qt/OutputSettingsWidget/: CMakeLists.txt  outputsettingswidget.cpp  outputsettingswidget.h  outputsettingswidget.ui
example/sce/src/gui/qt/QLongSpinBox/: CMakeLists.txt  qlongspinbox.cpp  qlongspinbox.h
example/sce/src/gui/qt/SatelliteSettingsWidget/: CMakeLists.txt  satellitesettingswidget.cpp  satellitesettingswidget.h  satellitesettingswidget.ui
example/sce/src/gui/qt/SettingsWidget/: CMakeLists.txt  settingswidget.cpp  settingswidget.h
example/sce/src/modules/: CMakeLists.txt
example/sce/src/modules/buc/: CMakeLists.txt  buc.cpp  buc.h
example/sce/src/modules/defer_output/: CMakeLists.txt  defer_output.cpp  defer_output.h
example/sce/src/modules/demodulator/: CMakeLists.txt  demodulator.cpp  demodulator.h
example/sce/src/modules/file_logger/: CMakeLists.txt  file_logger.cpp  file_logger.h
example/sce/src/modules/input/: CMakeLists.txt  input.cpp  input.h
example/sce/src/modules/line/: CMakeLists.txt  line.cpp  line.h
example/sce/src/modules/lnb/: CMakeLists.txt  lnb.cpp  lnb.h
example/sce/src/modules/logger/: CMakeLists.txt  logger.cpp  logger.h
example/sce/src/modules/modulator/: CMakeLists.txt  modulator.cpp  modulator.h
example/sce/src/modules/output/: CMakeLists.txt  output.cpp  output.h
example/sce/src/modules/satellite/: CMakeLists.txt  satellite.cpp  satellite.h
example/sce/src/modules/udp_input/: CMakeLists.txt  udp_input.h  udp_input_nix.cpp  udp_input_win.cpp
example/sce/src/modules/udp_output/: CMakeLists.txt  udp_output.cpp  udp_output.h
example/sce/src/utils/: CMakeLists.txt  emultiontypes.h  geocoords.h  point.h  waitgroup.h
example/sce/src/utils/MeasureUnits/: AttenuationUnits.h  AttenuationUnits.inl  FrequencyUnits.h  FrequencyUnits.inl  MeasureUnits.h  MeasureUnits.inl  PowerUnits.h  PowerUnits.inl  TimeUnits.h  TimeUnits.inl
example/sce/src/utils/json_wrapper/: CMakeLists.txt  json_wrapper.cpp  json_wrapper.h
example/sce/src/utils/modcod/: CMakeLists.txt  modcod.cpp  modcod.h
example/sce/src/utils/udp_client/: CMakeLists.txt  udp_client.h  udp_client_nix.cpp  udp_client_win.cpp
example/sce/tests/: CMakeLists.txt
example/sce/tests/core/: CMakeLists.txt  line.cpp
example/sce/tests/modules/: CMakeLists.txt  defer_output.cpp  demodulator_test.cpp  line_test.cpp  modulator_test.cpp  udp_input_test.cpp
task1/example/: logger.go  main.go
task1/example/internal/navigation/: navigation.go
task1/example/internal/quadtree/: graph.go  quadtree.go  quadtree_test.go  quadtreenode.go  utils.go
task1/example/internal/robobpacket/: robopacket.go
task1/example/internal/robot/: robot.go  telemetrydemon.go  utils.go
task1/example/internal/transform/: transform.go
task1/solution/: CMakeLists.txt  Main.cpp  Main.h
task1/solution/gcs/: receiver.py  schema.json  test.py
task1/solution/internal/: CMakeLists.txt
task1/solution/internal/ExampleLibrary/: CMakeLists.txt  ExampleLibrary.cpp  ExampleLibrary.h
task1/solution/internal/ExampleLibrary2/: CMakeLists.txt  ExampleLibrary2.cpp  ExampleLibrary2.h
task1/solution/internal/Networking/: CMakeLists.txt  ControllerPort.cpp  ControllerPort.h  IpAddress.h  TCPServerLinux.cpp  TCPServerLinux.h  TelemetryPort.cpp  TelemetryPort.h  UDPClientLinux.cpp  UDPClientLinux.h  UDPSocketLinux.cpp  UDPSocketLinux.h
task1/solution/internal/Robot/: CMakeLists.txt  Robot.cpp  Robot.h
task1/solution/internal/controller/: IpAddress.h  TCPServerLinux.h  TelemetryPort.cpp  UDPClientLinux.cpp  UDPClientLinux.h
task1/solution/internal/net/: CMakeLists.txt  IPAddress.hpp  TCPConn.hpp  UDPConn.h
task1/worlds/: .cobra_flex_demo.wbproj
task2/: README.md
task2/solution/: '  main  main.go  solution
task2/solution/internal/interp/: kinematic.go
task2/solution/robot/: main.go
task2/solution/test/: test_gh.go
(+24 files in other folders)
