# Add subdirectories
add_subdirectory(line)
add_subdirectory(input)
add_subdirectory(output)
add_subdirectory(udp_input)
add_subdirectory(udp_output)
add_subdirectory(defer_output)
add_subdirectory(buc)
add_subdirectory(lnb)
add_subdirectory(logger)
add_subdirectory(modulator)
add_subdirectory(demodulator)
add_subdirectory(satellite)
add_subdirectory(file_logger)
